# sate

./: .bumpversion.cfg  .gitignore  .pylintrc  .satefile  Cargo.toml  Pipfile  README.md  README.rst  alias  build.rs  diag.md  sate  sate-mode.el  sate.py  setup.cfg  test_sate.py  trace
sate/: __main__.py  app.py  parse.py  rules.py  types.py
scripts/: sate
src/: .satefile  main.rs  parse.rs  sate.pest  sate.rustpeg
test/: test_parse.py  test_rule.py  test_types.py
