[metadata]
name = sate
version = attr: sate.VERSION
author = Nicholas Bishop
author_email = nicholasbishop@gmail.com
url = https://github.com/nicholasbishop/sate
description = Simple command-line task runner
long_description = See https://github.com/nicholasbishop/sate for more information.

[options]
scripts = scripts/sate
