[metadata]
name = sate
version = attr: sate.VERSION
author = Nicholas Bishop
author_email = nicholasbishop@gmail.com
url = https://github.com/nicholasbishop/sate
description = Simple command-line task runner
long_description = See https://github.com/nicholasbishop/sate for more information.

[options]
scripts = scripts/sate
packages = sate
install_requires = attrs~=17.3.0; parsy~=1.2.0; toposort~=1.5